Trying to fix legend wrap

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -249,4 +249,9 @@ label + textarea { margin-top:10px; }
 
 legend {
   white-space: normal;
+  width: 100%;
+}
+legend span {
+  width: 100%;
+  display: block;
 }
